--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 .container {
+    background-image: url(../images/bg-pattern-desktop.svg);
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -21,6 +22,10 @@ body {
 
 .logo {
     margin-bottom: 100px;
+}
+
+.img-mobile {
+    display: none;
 }
 
 .inscription h1 {
